--- a/components/About/About.module.css
+++ b/components/About/About.module.css
@@ -12,6 +12,7 @@
     var(--color-neutral-dark) 0%,
     var(--color-primary) 10.26%
   );
+  scroll-margin-top: -88px;
 }
 
 .about-me-content {
@@ -90,6 +91,7 @@
 @media screen and (max-width: 1200px) {
   .about {
     padding-top: 240px;
+    scroll-margin-top: -160px;
   }
 
   .about-me-content {
