--- a/components/shared/SocialButtonRow/SocialButtonRow.module.css
+++ b/components/shared/SocialButtonRow/SocialButtonRow.module.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 0 8px 0 0;
 }
 
 @media screen and (max-width: 768px) {
