--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -6,7 +6,6 @@
   justify-content: space-between;
   padding: 1rem 2rem;
   z-index: 3;
-  background-color: var(--color-base-pewter);
   position: fixed;
   transition: top 0.2s ease-in-out;
   backdrop-filter: blur(12px);
@@ -49,7 +48,7 @@
   top: -5rem;
 }
 
-@media screen and (max-width: 780px) {
+@media screen and (max-width: 768px) {
   .hamburger {
     display: block;
     cursor: pointer;
@@ -59,14 +58,15 @@
     position: absolute;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     gap: 0.5rem;
-    top: 64px;
+    top: 65px;
     right: 0;
     width: 100%;
     height: 100vh;
     transition: 0.2s ease-in-out;
-    background-color: var(--color-base-pewter);
-    padding: 10px 10px 80px 10px;
+    background-color: var(--color-neutral-dark);
+    padding: 10px 10px 120px 10px;
     opacity: 0;
     pointer-events: none;
   }
