--- a/components/Contact/Contact.module.css
+++ b/components/Contact/Contact.module.css
@@ -5,6 +5,7 @@
   align-items: center;
   justify-content: center;
   text-align: center;
+  scroll-margin-top: -20px;
 }
 
 .contact p {
@@ -75,5 +76,11 @@
 @media screen and (max-width: 768px) {
   .contact-form-wrapper {
     width: 20rem;
+  }
+}
+
+@media screen and (max-width: 576px) and (max-height: 740px) {
+  .contact {
+    scroll-margin-top: -120px;
   }
 }
